src/objects/Apttus_Config2__AgreementPriceRule__c.object
<CustomObject>
    <description>Represents a special pricing rule associated with an agreement or an asset</description>
    <fields>
        <fullName>Apttus_CMConfig__AgreementId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated agreement</description>
        <inlineHelpText>ID of the associated agreement</inlineHelpText>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Agreement Price Rules</relationshipLabel>
        <relationshipName>AgreementPriceRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the account associated with the price rule</description>
        <inlineHelpText>ID of the account associated with the price rule</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agreement Price Rules</relationshipLabel>
        <relationshipName>AgreementPriceRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ActivatedDate__c</fullName>
        <description>The date the price rule was activated in the system</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The date the price rule was activated in the system</inlineHelpText>
        <label>Activated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AdjustmentAmount__c</fullName>
        <description>The price adjustment amount.</description>
        <inlineHelpText>The price adjustment amount.</inlineHelpText>
        <label>Adjustment Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AdjustmentType__c</fullName>
        <description>The price adjustment type</description>
        <inlineHelpText>The price adjustment type</inlineHelpText>
        <label>Adjustment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>% Discount</fullName>
                </value>
                <value>
                    <fullName>Discount Amount</fullName>
                </value>
                <value>
                    <fullName>% Markup</fullName>
                </value>
                <value>
                    <fullName>Markup Amount</fullName>
                </value>
                <value>
                    <fullName>Price Override</fullName>
                </value>
                <value>
                    <fullName>Price Factor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AllowRemoval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the user is allowed to remove the price rule</description>
        <inlineHelpText>Indicates whether the user is allowed to remove the price rule</inlineHelpText>
        <label>Allow Removal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AncestorId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the ancestor price rule</description>
        <inlineHelpText>ID of the ancestor price rule</inlineHelpText>
        <label>Ancestor</label>
        <referenceTo>Apttus_Config2__AgreementPriceRule__c</referenceTo>
        <relationshipLabel>Derived Price Rules</relationshipLabel>
        <relationshipName>DerivedPriceRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BundleProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the bundle product associated with the option</description>
        <inlineHelpText>ID of the bundle product associated with the option</inlineHelpText>
        <label>Bundle Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Agreement Price Rules (Bundle Product)</relationshipLabel>
        <relationshipName>AgreementPriceRules2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ChargeType__c</fullName>
        <description>The charge type associated with the price rule</description>
        <inlineHelpText>The charge type associated with the price rule</inlineHelpText>
        <label>Charge Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Price</fullName>
                </value>
                <value>
                    <fullName>License Fee</fullName>
                </value>
                <value>
                    <fullName>Subscription Fee</fullName>
                </value>
                <value>
                    <fullName>Implementation Fee</fullName>
                </value>
                <value>
                    <fullName>Installation Fee</fullName>
                </value>
                <value>
                    <fullName>Maintenance Fee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ConfigurationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated configuration</description>
        <inlineHelpText>ID of the associated configuration</inlineHelpText>
        <label>Configuration</label>
        <referenceTo>Apttus_Config2__ProductConfiguration__c</referenceTo>
        <relationshipLabel>Agreement Price Rules</relationshipLabel>
        <relationshipName>AgreementPriceRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ContractItemNumber__c</fullName>
        <description>The Unique identifier for the item number as referred to in the quote or contract</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>The Unique identifier for the item number as referred to in the quote or contract</inlineHelpText>
        <label>Contract Item Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ContractNumber__c</fullName>
        <description>The contract number associated with the price rule. The rule is associated with a conract number after activation.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The contract number associated with the price rule. The rule is associated with a conract number after activation.</inlineHelpText>
        <label>Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Criteria__c</fullName>
        <description>The rule criteria specification</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The rule criteria specification</inlineHelpText>
        <label>Criteria</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EffectiveDate__c</fullName>
        <description>The rule effective date. The rule becomes effective on this date and time.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The rule effective date. The rule becomes effective on this date and time.</inlineHelpText>
        <label>Effective Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ExpirationDate__c</fullName>
        <description>The rule expiration date. The rule becomes ineffective after this date and time.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The rule expiration date. The rule becomes ineffective after this date and time.</inlineHelpText>
        <label>Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsModifiable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the prce rule is modifiable</description>
        <inlineHelpText>Indicates whether the prce rule is modifiable</inlineHelpText>
        <label>Is Modifiable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__NetUnitPrice__c</fullName>
        <description>The net unit price for the product or service is the Unit Adjusted Price after applying the Group Adjustment %</description>
        <inlineHelpText>The net unit price for the product or service is the Unit Adjusted Price after applying the Group Adjustment %</inlineHelpText>
        <label>Net Unit Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__OrderId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the order associated with the price rule</description>
        <inlineHelpText>ID of the order associated with the price rule</inlineHelpText>
        <label>Order</label>
        <referenceTo>Apttus_Config2__Order__c</referenceTo>
        <relationshipLabel>Agreement Price Rules</relationshipLabel>
        <relationshipName>AgreementPriceRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PriceListId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>ID of the price list associated with the price rule</description>
        <inlineHelpText>ID of the price list associated with the price rule</inlineHelpText>
        <label>Price List</label>
        <referenceTo>Apttus_Config2__PriceList__c</referenceTo>
        <relationshipLabel>Agreement Price Rules</relationshipLabel>
        <relationshipName>AgreementPriceRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PriceListItemId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>ID of the price list item associated with the price rule</description>
        <inlineHelpText>ID of the price list item associated with the price rule</inlineHelpText>
        <label>Price List Item</label>
        <referenceTo>Apttus_Config2__PriceListItem__c</referenceTo>
        <relationshipLabel>Agreement Price Rules</relationshipLabel>
        <relationshipName>AgreementPriceRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PriceMatrixId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated matrix</description>
        <inlineHelpText>ID of the associated matrix</inlineHelpText>
        <label>Price Matrix</label>
        <referenceTo>Apttus_Config2__PriceMatrix__c</referenceTo>
        <relationshipLabel>Agreement Price Rules</relationshipLabel>
        <relationshipName>AgreementPriceRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductCategory__c</fullName>
        <description>The product category associated with the price rule</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The product category associated with the price rule</inlineHelpText>
        <label>Product Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductFamily__c</fullName>
        <description>The product family associated with the price rule</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The product family associated with the price rule</inlineHelpText>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductGroupId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the product group associated with the price rule</description>
        <inlineHelpText>ID of the product group associated with the price rule</inlineHelpText>
        <label>Product Group</label>
        <referenceTo>Apttus_Config2__ProductGroup__c</referenceTo>
        <relationshipLabel>Agreement Price Rules</relationshipLabel>
        <relationshipName>AgreementPriceRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the product associated with the price rule</description>
        <inlineHelpText>ID of the product associated with the price rule</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Agreement Price Rules</relationshipLabel>
        <relationshipName>AgreementPriceRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductOptionId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>ID of the product option associated with the price rule</description>
        <inlineHelpText>ID of the product option associated with the price rule</inlineHelpText>
        <label>Product Option</label>
        <referenceTo>Apttus_Config2__ProductOptionComponent__c</referenceTo>
        <relationshipLabel>Agreement Price Rules</relationshipLabel>
        <relationshipName>AgreementPriceRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RuleType__c</fullName>
        <description>The rule type</description>
        <inlineHelpText>The rule type</inlineHelpText>
        <label>Rule Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contract</fullName>
                    <default>true</default>
                    <label>Contract</label>
                </value>
                <value>
                    <fullName>Asset</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Sequence__c</fullName>
        <description>The rule evaluation sequence</description>
        <inlineHelpText>The rule evaluation sequence</inlineHelpText>
        <label>Sequence</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Status__c</fullName>
        <description>The current status of the price rule</description>
        <inlineHelpText>The current status of the price rule</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Finalized</fullName>
                </value>
                <value>
                    <fullName>Being Amended</fullName>
                </value>
                <value>
                    <fullName>Superseded</fullName>
                </value>
                <value>
                    <fullName>Activated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__ProposalId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated quote/proposal</description>
        <inlineHelpText>ID of the associated quote/proposal</inlineHelpText>
        <label>Quote/Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>Agreement Price Rules</relationshipLabel>
        <relationshipName>AgreementPriceRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Agreement Price Rule</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agreement Price Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>